--- a/Resources/views/default/index.html.twig
+++ b/Resources/views/default/index.html.twig
@@ -10,13 +10,13 @@
 
 <div id='ajax-section'>
     <h2>You are on page</h2>
-    <div class='massive'>1</div>
+    <div class='massive content'>1</div>
 </div>
 
 <div id='nav-controls-section'>
-    <form action='/' method='post'>
-        <input type='submit' name='go-back' value='back' />
-        <input type='submit' name='go-forward' value='continue' />
+    <form action='/' method='post' class='nav-form'>
+        <input type='submit' id='go-back' name='go-back' class='go go-back' value='back' />
+        <input type='submit' id='go-forward' name='go-forward' class='go go-forward' value='continue' />
     </form>
 </div>
 
@@ -27,4 +27,5 @@
     
     <script src="{{ asset('bundles/app/js/lib/jquery-2.1.3.js') }}"></script>
     <script src="{{ asset('bundles/app/js/lib/jquery.history.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/main.js') }}"></script>
 {% endblock %}
